[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boston311"
authors = [{ name = "Joshua Cook", email = "joshuacook0023@gmail.com" }]
home-page = "https://github.com/jhrcook/boston311"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dynamic = ["version", "description"]
dependencies = [
    "requests >=2.25",
    "pydantic >=1.8",
    "configparser; python_version >= '3.9'",
]

[project.optional-dependencies]
test = ["pytest >=6.2", "pytest-cov >=2.12", "pytest-sugar >=0.9", "tox >=3.24"]
dev = ["flit >=3.3", "keyring >=23.0", "tox >=3.24"]

[project.urls]
# Documentation = "https://flit.readthedocs.io/en/latest/"
Source = "https://github.com/jhrcook/boston311"
