[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boston311"
authors = [{ name = "Joshua Cook", email = "joshuacook0023@gmail.com" }]
home-page = "https://github.com/jhrcook/boston311"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "description"]
dependencies = ["requests >=2.25", "pydantic >=1.8"]

[project.optional-dependencies]
test = [
    "pytest >=6.2",
    "pytest-cov >=2.12",
    "pytest-sugar >=0.9",
    "tox >=3.24",
    "factory-boy >=3.2",
]
dev = ["flit >=3.3", "keyring >=23.0", "tox >=3.24"]
doc = ["pdoc3"]

[project.urls]
Source = "https://github.com/jhrcook/boston311"
Tracker = "https://github.com/jhrcook/boston311/issues"
# Documentation = "https://flit.readthedocs.io/en/latest/"
